# sistema_eda

./: .gitignore  README.md  anuncios_olx.xlsx  main.py  pyproject.toml  relatorio_com_target.md  relatorio_com_target_plain.md  relatorio_regressao.md  relatorio_regressao_plain.md  relatorio_simples.md  relatorio_simples_plain.md
.github/workflows/: quality.yml
smarteda/: __init__.py
smarteda/analysis/: __init__.py  categorical.py  conditioned.py  correlation.py  drift.py  importance.py  monitoring.py  numeric.py  preprocessing.py  quality.py  statistical_tests.py  target.py  temporal.py  time_series.py
smarteda/core/: __init__.py  adapters.py  analyzer.py  config.py  type_inference.py
smarteda/insights/: __init__.py  agent.py  context.py
smarteda/report/: __init__.py  generator.py  html.py  styles.py
smarteda/utils/: __init__.py  helpers.py
tests/: test_advanced_drift.py  test_analysis.py  test_api.py  test_bounded_materialization.py  test_html_report.py  test_insight_agent.py  test_insight_html.py  test_preprocessing.py  test_quality_and_drift.py  test_time_series.py
