[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smarteda"
version = "1.5.0"
description = "Statistical data profiling, drift monitoring, interactive reports, and privacy-aware AI insights."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Vinicius de Sousa" }
]
keywords = ["data-analysis", "eda", "statistics", "machine-learning", "pandas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "matplotlib>=3.6",
  "seaborn>=0.12",
  "plotly>=5.18",
]

[project.optional-dependencies]
polars = ["polars>=0.20", "pyarrow>=14"]
duckdb = ["duckdb>=0.10"]
all = ["polars>=0.20", "pyarrow>=14", "duckdb>=0.10"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/viniciusds2020/sistema_eda"
Repository = "https://github.com/viniciusds2020/sistema_eda"
Issues = "https://github.com/viniciusds2020/sistema_eda/issues"

[tool.hatch.build.targets.wheel]
packages = ["smarteda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["smarteda"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
